boreal/tests/assets/invalid_files/parsing/str_to_int_range3.yar
// [error: error converting to integer: number too large to fit in target type]
// [no libyara conformance]
// Test disabled against yara because of https://github.com/VirusTotal/yara/issues/1791,
// yara returning an error depends on the platform.
rule a {
    strings:
        $a = { AB [100000000000000000000000] CD }
    condition:
        $a
}

